0027972: Visualization - remove unused and not implemented property V3d_View::EnableGLLight()